--- a/web_app/static/css/style.css
+++ b/web_app/static/css/style.css
@@ -11,6 +11,12 @@ body {
   background-color: #1e1e1e !important;
 }
 
+.user-glyph {
+  padding: 10px;
+  font-size: 2em;
+  border-radius: 50% !important;
+}
+
 .modal-backdrop {
   opacity: 0.6 !important;
 }
@@ -546,12 +552,11 @@ a.btn-signin:hover {
   color: white !important;
   margin: 0 auto;
   border-radius: 20px !important;
-  padding: 10px 0 10px 0 !important;
-  margin-top: -20px;
+  padding: 17px !important;
 }
 
 .btn-tab-active {
-  background-color: #4cbc18 !important;
+  background-color: #319a00 !important;
   border-color: #4cbc18 !important;
   color: white !important;
 }
@@ -580,7 +585,6 @@ a.btn-signin:hover {
 }
 
 .btn-tab {
-  background-color: #595a59;
   color: white !important;
   border: 1px solid #4cbc18 !important;
 }
@@ -624,6 +628,17 @@ a.btn-signin:hover {
   cursor: pointer;
 }
 
+.empty-friends-prompt {
+  padding: 17px !important;
+  margin: 0 auto;
+  border-radius: 20px !important;
+  background-color: #1e1e1e !important;
+  color: white !important;
+  font-weight: bold;
+  text-align: center !important;
+  margin-bottom: 20px !important;
+}
+
 .user-label {
   padding: 15px 25px 15px 15px !important;
   margin: 10px 10px 10px 10px !important;
@@ -632,6 +647,7 @@ a.btn-signin:hover {
   color: white !important;
   font-weight: bold;
   text-align: center !important;
+  cursor: pointer;
 }
 
 .user-label:hover {
